# FinGuardAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
finguardai/: __init__.py  api.py  app.py  mistral.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: FileUpload.jsx  InvoiceProcessor.jsx  InvoiceResults.jsx  RiskAssessment.jsx
